crates/norn-macros/tests/ui/hashmap_non_string_key.stderr
error: ToolArgs: HashMap keys must be `String` for schema generation (String key requirement); use #[tool_args(schema = {...})] for other key types
  --> tests/ui/hashmap_non_string_key.rs:10:23
   |
10 |     counters: HashMap<u32, u64>,
   |                       ^^^
