crates/norn-macros/tests/ui/hashmap_non_string_key.rs
#![allow(dead_code)]

use std::collections::HashMap;

use norn_macros::ToolArgs;

#[derive(ToolArgs)]
struct NonStringKey {
    /// Counters keyed by numeric id.
    counters: HashMap<u32, u64>,
}

fn main() {}
